Schaltgrenzen verbessert; die höheren werte fangen den Betrieb beider WP zeitgleich nicht ab.

--- a/sd-karteninhalt/index.html
+++ b/sd-karteninhalt/index.html
@@ -602,7 +602,7 @@
 		<br><span class="ladestatus">-</span>
 	</span>
 	<span id="wasser_begleitheizung">
-		W-HZ
+		W-BGL
 		<br><span class="ladestatus">-</span>
 	</span>
 
