--- a/sd-karteninhalt/index.html
+++ b/sd-karteninhalt/index.html
@@ -125,7 +125,7 @@
 			document.getElementById('heizung_temperatur_differenz').innerHTML = daten['heizung_temperatur_differenz'] * 1 - 540;
 			
 			document.getElementById('heizstab_erlaubt').className = daten['heizstab_erlaubt'] ? 'on' : 'off';
-			document.getElementById('heizstab_erlaubt').getElementsByClassName('ladestatus')[0].innerHTML = daten['heizstab_erlaubt'] ? 'an' : 'sperr';
+			document.getElementById('heizstab_erlaubt').getElementsByClassName('ladestatus')[0].innerHTML = daten['heizstab_erlaubt'] ? 'an' : 'off';
 			
 			document.getElementById('heizung_luftvorwaermer').className = daten['heizung_luftvorwaermer_lastschutz'] ? "sperr" : (daten['heizung_luftvorwaermer_an'] ? 'on' : 'off');
 			document.getElementById('heizung_luftvorwaermer').getElementsByClassName('ladestatus')[0].innerHTML = daten['heizung_luftvorwaermer_relay_an'] ? "an" : (daten['heizung_luftvorwaermer_lastschutz'] ? "sperr" : "aus");
@@ -502,12 +502,12 @@
 				background-color: var(--dunkel);
 			}
 			.zusatzinfo > .off {
-			}
-			.zusatzinfo > .schutz {
 				border: solid 0.2rem #000;
 				border-color: var(--dunkel);
 				padding-right: 0.3rem;
 				padding-left: 0.3rem;
+			}
+			.zusatzinfo > .sperr {
 			}
 
 		.schalter {
