--- a/sd-karteninhalt/index.html
+++ b/sd-karteninhalt/index.html
@@ -565,6 +565,7 @@
 		.weitere_info {
 			text-align: center;
 			font-size: 0.9rem;
+			margin-top: 0.3rem;
 		}
 			.weitere_info * {
 				color: var(--mitteldunkel);
