--- a/sd-karteninhalt/index.html
+++ b/sd-karteninhalt/index.html
@@ -122,10 +122,10 @@
 			document.getElementById('waermepumpen_abluft_temperatur').innerHTML = daten['waermepumpen_abluft_temperatur'];
 			document.getElementById('waermepumpen_abluft_luftfeuchte').innerHTML = daten['waermepumpen_abluft_luftfeuchte'];
 			
-			document.getElementById('heizung_temperatur_differenz').innerHTML = daten['heizung_temperatur_differenz'] * 1 - 540;
+			document.getElementById('heizung_temperatur_differenz_in_grad').innerHTML = daten['heizung_temperatur_differenz_in_grad'];
 			
 			document.getElementById('heizstab_erlaubt').className = daten['heizstab_erlaubt'] ? 'on' : 'off';
-			document.getElementById('heizstab_erlaubt').getElementsByClassName('ladestatus')[0].innerHTML = daten['heizstab_erlaubt'] ? 'an' : 'off';
+			document.getElementById('heizstab_erlaubt').getElementsByClassName('ladestatus')[0].innerHTML = daten['heizstab_erlaubt'] ? 'an' : 'aus';
 			
 			document.getElementById('heizung_luftvorwaermer').className = daten['heizung_luftvorwaermer_lastschutz'] ? "sperr" : (daten['heizung_luftvorwaermer_an'] ? 'on' : 'off');
 			document.getElementById('heizung_luftvorwaermer').getElementsByClassName('ladestatus')[0].innerHTML = daten['heizung_luftvorwaermer_relay_an'] ? "an" : (daten['heizung_luftvorwaermer_lastschutz'] ? "sperr" : "aus");
@@ -633,7 +633,7 @@
 		HZ-Ab: <span id="waermepumpen_abluft_temperatur"></span> &#8451; (<span id="waermepumpen_abluft_luftfeuchte"></span> %)
 	</div>
 	<div>
-		HZ-STB-Diff: <span id="heizung_temperatur_differenz"></span>
+		HZ-Diff: +<span id="heizung_temperatur_differenz_in_grad"></span> °C
 		Dachverteilung: N <span id="solaranteil_in_prozent_string1"></span> % / S <span id="solaranteil_in_prozent_string2"></span> %
 	</div>
 </div>
