--- a/sd-karteninhalt/index.html
+++ b/sd-karteninhalt/index.html
@@ -109,12 +109,12 @@
 			document.getElementById('heizung').className = daten['heizung_lastschutz'] ? "sperr" : (daten['heizung_aktiv'] ? 'on' : 'off');
 			document.getElementById('heizung').getElementsByClassName('ladestatus')[0].innerHTML = daten['heizung_lastschutz'] ? "sperr" : (daten['heizung_ueberladen'] ? "an" : 'frei');
 			if(daten['heiz_verdichter_laufzeit'] > 0) {
-				document.getElementById('heiz_verdichter_zeit').innerHTML = `${Math.floor(daten['heiz_verdichter_laufzeit'] / 3600)}:${String(Math.floor(daten['heiz_verdichter_laufzeit'] % 3600 / 60)).padStart(2, '0')}`;
+				document.getElementById('heiz_verdichter_zeit').innerHTML = Math.floor(daten['heiz_verdichter_laufzeit'] / 3600) + ":" + String(Math.floor(daten['heiz_verdichter_laufzeit'] % 3600 / 60)).padStart(2, '0');
 			} else {
 				if(daten['heiz_verdichter_pausenzeit'] > 86400) {
 					document.getElementById('heiz_verdichter_zeit').innerHTML = '-';
 				} else {
-					document.getElementById('heiz_verdichter_zeit').innerHTML = `${Math.floor(daten['heiz_verdichter_pausenzeit'] / 3600)}:${String(Math.floor(daten['heiz_verdichter_pausenzeit'] % 3600 / 60)).padStart(2, '0')}`;
+					document.getElementById('heiz_verdichter_zeit').innerHTML = Math.floor(daten['heiz_verdichter_pausenzeit'] / 3600) + ":" + String(Math.floor(daten['heiz_verdichter_pausenzeit'] % 3600 / 60)).padStart(2, '0');
 				}
 			}
 			document.getElementById('roller_laden_an').className = daten['roller_lastschutz'] ? "sperr" : (daten['roller_laden_an'] ? 'on' : 'off');
